apps/bgd/overlays/rollouts-demo/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rollouts-demo
  name: rollouts-demo
spec:
  replicas: 5
  selector:
    matchLabels:
      app: rollouts-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
      containers:
---
