apps/bgd/overlays/rollouts-demo/bgd-rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-extension
spec:
  replicas: 5
  revisionHistoryLimit: 3
  strategy:
    canary: 
      steps: 
      - setWeight: 20 
      - pause: {}  
      - setWeight: 40
      - pause: {duration: 45}  
      - setWeight: 60
      - pause: {duration: 20}
      - setWeight: 80
      - pause: {duration: 10}
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: rollout-demo
