apps/bgd/overlays/rollouts-demo/bgd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
spec:
  ports: 
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector: 
    app: rollouts-demo
---
