apps/bgd/overlays/rollouts-demo/bgd-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rollout-extension
spec:
  to:
    kind: Service
    name: rollouts-extension
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
